# qmlTable

./: .gitignore  CMakeLists.txt
qmlTable/: CMakeLists.txt  main.cpp  main.qml
src/: main.cpp
src/core/: tablemodel.cpp  tablemodel.h
src/qml/: contacts.txt  main.qml  qml.qrc
